frontend/test/should_fail/computations_decl_use_returns_arguments_mismatch_007.grg
using model_init;

function func() : boolean
{
	return;
}

